fixed responsiveness in homepage form on mobile

--- a/src/scss/pages/_home-page.scss
+++ b/src/scss/pages/_home-page.scss
@@ -379,6 +379,16 @@ ul.text-icons{
       color: $dark;
     }
   }
+  @include media-breakpoint-up(md){
+    .form{
+      max-width: 75%;
+    }
+  }
+  @include media-breakpoint-up(md){
+    .form{
+      max-width: 50%;
+    }
+  }
 }
 
 
